Multires modifier not working properly in Object/Vertex Paint/Weight Paint/Texture Paint modes #77487

Closed
opened 2020-06-06 04:48:43 +02:00 by TheRedWaxPolice · 11 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-2.90.0-b74cc23dc478-windows64
Worked: Previous versions

Short description of error
The Multires modifier is not working properly in Object/Vertex Paint/Weight Paint/Texture Paint modes, the main buttons are greyed out.
If you switch to other modes, like sculpt/edit, it works.

Exact steps for others to reproduce the error

  • Launch Blender
  • Add a Multires mod to the cube
  • Main buttons greyed out
    image.png

Bug probably introduced in 9b099c8612 ? 🤔

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-2.90.0-b74cc23dc478-windows64 Worked: Previous versions **Short description of error** The Multires modifier is not working properly in Object/Vertex Paint/Weight Paint/Texture Paint modes, the main buttons are greyed out. If you switch to other modes, like sculpt/edit, it works. **Exact steps for others to reproduce the error** - Launch Blender - Add a Multires mod to the cube - *Main buttons greyed out* ![image.png](https://archive.blender.org/developer/F8585171/image.png) Bug probably introduced in 9b099c8612 ? 🤔

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Hans Goudey was assigned by Ankit Meel 2020-06-06 09:24:05 +02:00
Member
0f1361bbc3

@ankitm Please reopen it, it's not resolved...

@ankitm Please reopen it, it's not resolved...
Member

which build did you test ?
The commit is in master for 18 hours now. https://developer.blender.org/diffusion/B/history/master/;0f1361bbc3c5670934dfa49a1fab514ddc4cbce9
either way @HooglyBoogly might reopen & respond here.

which build did you test ? The commit is in master for 18 hours now. https://developer.blender.org/diffusion/B/history/master/;0f1361bbc3c5670934dfa49a1fab514ddc4cbce9 either way @HooglyBoogly might reopen & respond here.

@ankitm I'm testing the latest build from buildbot, and the commit you're showing is already there, but it just fixed issues with the multires not working in sculpt mode plus some missing property. It didn't fixed what I'm showing here.

@ankitm I'm testing the latest build from buildbot, and the commit you're showing is already there, but it just fixed issues with the multires not working in sculpt mode plus some missing property. It didn't fixed what I'm showing here.
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Thanks for the report. I'll look into it as soon as possible.

Thanks for the report. I'll look into it as soon as possible.

This issue was referenced by ccbf858bb8

This issue was referenced by ccbf858bb8ffa81c6adbcb8ab667c5b87f96a182
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77487
No description provided.