Fix T77487: Only disable Multires Buttons in Edit Mode

Previously the operator buttons were disabled in every mode but
edit mode and sculpt mode.